--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -193,6 +193,9 @@
 .wave-divider-reverse {
   background-color: #0a1d35;
   line-height: 0;
+  font-size: 0;
+  margin-top: -1px;
+  margin-bottom: -1px;
 }
 
 .wave-divider-reverse svg {
